examples/markdown/force-app/objects/Event__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>