examples/markdown/force-app/objects/Event__c/fields/Social_Security_Number__c.field-meta.xml
<CustomField>
    <fullName>Social_Security_Number__c</fullName>
    <label>Social Security Number</label>
    <description>Used to store the U.S. social security number in 9 digit format.</description>
    <length>9</length>
    <type>Text</type>
    <complianceGroup>PII</complianceGroup>
</CustomField>