examples/markdown/force-app/objects/Event__c/fields/Tag_Line__c.field-meta.xml
<CustomField>
    <fullName>Tag_Line__c</fullName>
    <label>Tag Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>